# stacmlguide

./: .gitignore  .nojekyll  README.md  _quarto.yml  contributing.html  contributing.qmd  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: pr-preview.yml  publish.yml
_site/: contributing.html  index.html  search.json  styles.css
notebooks/: MLModelExtension.ipynb  Untitled.ipynb
pr-preview/pr-5/: index.html  search.json
site_libs/bootstrap/: bootstrap-dark.min.css
