[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stacmlguide"
description = "A guide on using the STAC ML Model extension."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Development Seed", email = "info@developmentseed.org"}]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "pystac",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0.0",
]

[tool.setuptools]
platforms = ["Any"]
include-package-data = true

[tool.setuptools_scm]
local_scheme = "node-and-date"
fallback_version = "999.999.999+unknown"
